# TensorSlow

./: CMakeLists.txt  README.md  TODO.md  dump.txt  gd.cpp  main.cpp  main.ipynb  main.py
include/roml/: math.h
include/tensorslow/: math.h  matrix.h  model.h  optimizer.h  util.h
numpy/tensorslow/: tensor.py
numpy/tensorslow/nn/: activations.py  layers.py  module.py
slow/: CMakeLists.txt  gd.cpp  main.cpp
slow/include/tensorslow/: model.h  optimizer.h
tensorslow/: __init__.py  functional.py  tensor.py
tensorslow/nn/: __init__.py  layers.py
